--- a/css/css.html
+++ b/css/css.html
@@ -7,7 +7,11 @@
         <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1 class="cssh1">Notes on CSS</h1>
+        <div class="csstopic title">
+            <p>
+                Notes on CSS
+            </p>
+        </div>
         <ol class="t-o-c">
             <li>
                 <a href="./intro-to-css/i-t-css.html" target="_self" rel="noopener noreferrer">Intro to CSS</a>
