--- a/css/intro-to-css/i-t-css.html
+++ b/css/intro-to-css/i-t-css.html
@@ -7,7 +7,16 @@
         <link rel="stylesheet" href="../../styles.css">
     </head>
     <body>
-        <h1>Syntax</h1>
+        <div class="css csscolor topic">
+            <p>
+                Introduction to CSS
+            </p>
+        </div>
+        <div class="css itc title">
+            <p>
+                Syntax
+            </p>
+        </div>
         <p>
             CSS are made of rules composed of selectors, a property-value pair, with a semicolon to separate the declarations of the property-value pair.
         </p>
@@ -379,5 +388,7 @@
     <a href="../cascade/cascade.html" target="_self" rel="noopener noreferrer">Next Lesson: The Cascade</a>
     <br>
     <a href="../css.html" target="_self" rel="noopener noreferrer">Back to CSS</a>
+    <br>
+    <a href="../../index.html" target="_self" rel="noopener noreferrer">Back to Homepage</a>
     </body>
 </html>
