--- a/flexbox/alignment/alignment.html
+++ b/flexbox/alignment/alignment.html
@@ -7,9 +7,11 @@
         <title>Alignment</title>
     </head>
     <body>
-        <h1>
-            Alignment
-        </h1>
+        <div class="flexbox flexboxcolor alignment topic">
+            <p>
+                Alignment
+            </p>
+        </div>
 
 
         <h2>
@@ -537,7 +539,6 @@
                             </li>
                         </ul>
                     </li>
-                    a
                 </ul>
             </li>
         </ul>
