--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>
-            Review Notes on The Odin Project Course
-        </h1>
+        <div class="topic">
+            <p>
+                Review Notes on The Odin Project Course
+            </p>
+        </div>
         <ul class="hometopics t-o-c">
             <li>
                 <a href="./html/html.html" class="link" target="_self" rel="noopener noreferrer">HTML</a>
@@ -22,6 +24,9 @@
             </li>
             <li>
                 <a href="./javascript/javascript.html" class="link" target="_self" rel="noopener noreferrer">JavaScript</a>
+            </li>
+            <li>
+                <a href="./miscellaneous/miscellaneous.html" class="link" target="_self" rel="noopener noreferrer">Miscellaneous</a>
             </li>
         </ul>
         <br>
