--- a/javascript/javascript.html
+++ b/javascript/javascript.html
@@ -7,9 +7,11 @@
         <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1 class="jsh1">
-            Notes on JavaScript
-        </h1>
+        <div class="javascript javascriptcolor topic">
+            <p>
+                Notes on JavaScript
+            </p>
+        </div>
         <ol class="t-o-c">
             <li>
                 <a href="./v-a-o/v-a-o.html" target="_self" rel="noopener noreferrer">Variables and Operators</a>
