--- a/css/block-and-inline/b-i.html
+++ b/css/block-and-inline/b-i.html
@@ -7,9 +7,11 @@
         <link rel="stylesheet" href="../../styles.css">
     </head>
     <body>
-        <h1>
-            Block and Inline
-        </h1>
+        <div class="css csscolor bai topic">
+            <p>
+                Block and Inline
+            </p>
+        </div>
         <h3>
             Overview
         </h3>
@@ -81,5 +83,7 @@
         <a href="../../flexbox/intro/i-t-f.html" target="_self" rel="noopener noreferrer">Next Lesson: Introduction to Flexbox</a>
         <br>
         <a href="../css.html" target="_self" rel="noopener noreferrer">Back to CSS</a>
+        <br>
+        <a href="../../index.html" target="_self" rel="noopener noreferrer">Back to Homepage</a>
     </body>
 </html>
