--- a/css/box-model/box-model.html
+++ b/css/box-model/box-model.html
@@ -7,9 +7,16 @@
         <title>The Box Model</title>
     </head>
     <body>
-        <h1>
-            The Box Model
-        </h1>
+        <div class="css csscolor bm topic">
+            <p>
+                Box Model
+            </p>
+        </div>
+        <div class="css bm title">
+            <p>
+                The Box Model
+            </p>
+        </div>
         <p>
             The simplest way to structure a webpage is to envision all the elements on the page as a set of building
             blocks. The simplest shape for us to understand is a rectangular box. You can have one surrounding 
@@ -314,5 +321,7 @@
         <a href="../block-and-inline/b-i.html" target="_self" rel="noopener noreferrer">Next Lesson: Block and Inline</a>
         <br>
         <a href="../css.html" target="_self" rel="noopener noreferrer">Back to CSS</a>
+        <br>
+        <a href="../../index.html" target="_self" rel="noopener noreferrer">Back to Homepage</a>
     </body>
 </html>
