--- a/css/cascade/cascade.html
+++ b/css/cascade/cascade.html
@@ -7,9 +7,11 @@
         <link rel="stylesheet" href="../../styles.css">
     </head>
     <body>
-        <h1>
-            Cascade of CSS
-        </h1>
+        <div class="css csscolor cascade topic">
+            <p>
+                Cascade of CSS
+            </p>
+        </div>
         <p>
             When applying CSS to HTML, we often have rules that conflict with one another. This brings interesting 
             results that could be undesired. CSS only applies rules the way we tell it to, with the exception 
@@ -272,5 +274,7 @@
         <a href="../box-model/box-model.html" target="_self" rel="noopener noreferrer">Next Lesson: The Box Model</a>
         <br>
         <a href="../css.html" target="_self" rel="noopener noreferrer">Back to CSS</a>
+        <br>
+        <a href="../../index.html" target="_self" rel="noopener noreferrer">Back to Homepage</a>
     </body>
 </html>
