--- a/flexbox/axes/axes.html
+++ b/flexbox/axes/axes.html
@@ -7,9 +7,11 @@
         <title>Axes</title>
     </head>
     <body>
-        <h1>
-            Axes
-        </h1>
+        <div class="flexbox flexboxcolor axes topic">
+            <p>
+                Axes
+            </p>
+        </div>
         <h2>
             Overview            
         </h2>
@@ -170,5 +172,7 @@
         <a href="../alignment/alignment.html" target="_self" rel="noopener noreferrer">Next Lesson: Alignment</a>
         <br>
         <a href="../../flexbox/flexbox.html" target="_self" rel="noopener noreferrer">Back to Flexbox</a>
+        <br>
+        <a href="../../index.html" target="_self" rel="noopener noreferrer">Back to Homepage</a>
     </body>
 </html>
