--- a/flexbox/growing-and-shrinking/g-a-s.html
+++ b/flexbox/growing-and-shrinking/g-a-s.html
@@ -7,9 +7,11 @@
         <title>Growing and Shrinking</title>
     </head>
     <body>
-        <h1>
-            Growing and Shrinking
-        </h1>
+        <div class="flexbox flexboxcolor gas topic">
+            <p>
+                Growing and Shrinking
+            </p>
+        </div>
         <h3>
             Overview
         </h3>
@@ -562,5 +564,7 @@
         <a href="../axes/axes.html" target="_self" rel="noopener noreferrer">Next Lesson: Axes</a>
         <br>
         <a href="../flexbox.html" target="_self" rel="noopener noreferrer">Back to Flexbox</a>
+        <br>
+        <a href="../../index.html" target="_self" rel="noopener noreferrer">Back to Homepage</a>
     </body>
 </html>
