--- a/flexbox/intro/i-t-f.html
+++ b/flexbox/intro/i-t-f.html
@@ -7,9 +7,11 @@
             <title>Introduction to Flexbox</title>
         </head>
         <body>
-            <h1>
-                Introduction to Flexbox
-            </h1>
+            <div class="flexbox flexboxcolor itf topic">
+                <p>
+                    Introduction to Flexbox
+                </p>
+            </div>
             
             
             <h3>
@@ -167,5 +169,7 @@
             <a href="../growing-and-shrinking/g-a-s.html" target="_self" rel="noopener noreferrer">Next Lesson: Growing and Shrinking</a>
             <br>
             <a href="../flexbox.html" target="_self" rel="noopener noreferrer">Back to Flexbox</a>
+            <br>
+            <a href="../../index.html" target="_self" rel="noopener noreferrer">Back to Homepage</a>
         </body>
 </html>
