--- a/html/body-elements/body-elements.html
+++ b/html/body-elements/body-elements.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-    <div class="html be title">
+    <div class="html htmlcolor be topic">
             Body Elements
     </div>
     <br>
@@ -56,5 +56,7 @@
     <a href="../lists/lists.html" target="_self" rel="noopener noreferrer">Next Lesson: Lists</a>
     <br>
     <a href="../html.html" target="_self" rel="noopener noreferrer">Back to HTML</a>
+    <br>
+    <a href="../../index.html" target="_self" rel="noopener noreferrer">Back to Homepage</a>
 </body>
 </html>
