--- a/html/boilerplate/boilerplate.html
+++ b/html/boilerplate/boilerplate.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-    <div class="html title">
+    <div class="html htmlcolor topic">
+        <p>
             Boilerplate
+        </p>
     </div>
     <br>
     <div class="html bp text">
@@ -42,5 +44,7 @@
     <a href="../body-elements/body-elements.html" target="_self" rel="noopener noreferrer">Next Lesson: Body Elements</a>
     <br>
     <a href="../html.html" target="_self" rel="noopener noreferrer">Back to HTML</a>
+    <br>
+    <a href="../../index.html" target="_self" rel="noopener noreferrer">Back to Homepage</a>
 </body>
 </html>
