--- a/html/links-and-images/l-a-i.html
+++ b/html/links-and-images/l-a-i.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-    <div class="html lai title">
-        Links and Images
+    <div class="hmtl htmlcolor lai topic">
+        <p>
+            Links and Images
+        </p>
     </div>
     <br>
     <div>
-        <div class="html lai header">
+        <div class="html lai title">
             Links
         </div>
         <div class="html lai text">
@@ -51,7 +53,7 @@
         </div>
     </div>
     <div>
-        <div class="html lai header">
+        <div class="html lai title">
             <p>
                 Images
             </p>
@@ -81,5 +83,7 @@
     <a href="../../css/intro-to-css/i-t-css.html" target="_self" rel="noopener noreferrer">Next Lesson: Intro to CSS</a>
     <br>
     <a href="../html.html" target="_self" rel="noopener noreferrer">Back to HTML</a>
+    <br>
+    <a href="../../index.html" target="_self" rel="noopener noreferrer">Back to Homepage</a>
 </body>
 </html>
