--- a/html/lists/lists.html
+++ b/html/lists/lists.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-    <div class="html lists title">
-        Lists
+    <div class="html htmlcolor lists topic">
+        <p>
+            Lists
+        </p>
     </div>
     <br>
     <div class="html lists text">
@@ -52,5 +54,7 @@
     <a href="../links-and-images/l-a-i.html">Next Lesson: Links and Images</a>
     <br>
     <a href="../html.html">Back to HTML</a>
+    <br>
+    <a href="../../index.html" target="_self" rel="noopener noreferrer">Back to Homepage</a>
 </body>
 </html>
