--- a/javascript/v-a-o/v-a-o.html
+++ b/javascript/v-a-o/v-a-o.html
@@ -14,7 +14,7 @@
             <img src="../../images/math.gif" alt="Brain Processing GIF">
         </div>
         <div>
-            <div class="javascript vao header">
+            <div class="javascript vao title">
                 <p>
                     Overview
                 </p>
@@ -44,7 +44,7 @@
 
 
         <div>
-            <div class="javascript vao header">
+            <div class="javascript vao title">
                 <p>
                     How to run JavaScript code
                 </p>
@@ -93,7 +93,7 @@
 
 
         <div>
-            <div class="javascript vao header">
+            <div class="javascript vao title">
                 <p>
                     Variables
                 </p>
@@ -180,7 +180,7 @@
 
 
         <div>
-            <div class="javascript vao header">
+            <div class="javascript vao title">
                 <p>
                     Numbers
                 </p>
@@ -205,7 +205,7 @@
 
 
         <div>
-            <div class="javascript vao header">
+            <div class="javascript vao title">
                 <p>
                     <a href="https://javascript.info/variables#variable-naming" target="_self" rel="noopener noreferrer">JavaScript.info on Variable Naming</a>
                 </p>
@@ -502,7 +502,7 @@
         </div>
 
         <div>
-            <div class="javascript vao header">
+            <div class="javascript vao title">
                 <p>
                     <a href="https://www.w3schools.com/js/js_arithmetic.asp" target="_self" rel="noopener noreferrer">W3Schools' on JavaScript Arithmetic</a>
                 </p>
@@ -630,7 +630,7 @@
         </div>
 
         <div>
-            <div class="javascript vao header">
+            <div class="javascript vao title">
                 <p>
                     <a href="https://www.w3schools.com/js/js_numbers.asp" target="_self" rel="noopener noreferrer">W3Schools' on JavaScript Numbers</a>
                 </p>
@@ -707,11 +707,32 @@
                     </code>
                     &lt;script&#47;&gt;
                 </pre>
+                <p>
+                    Writing the script above will not have the evaluation of "0.3" but rather a very close value to it.
+                </p>
+                <img src="../../images/confused-smokey.gif" alt="Confused from Friday confused">
+                <p>
+                    To prevent this problem, we have add some multiplication and division processes to work properly.
+                </p>
+                <pre>
+                    &lt;script&gt;
+                    <code>
+                        let x = (0.2 * 10 + 0.1 * 10) / 10;
+                    </code>
+                    &lt;script&#47;&gt;
+                </pre>
+                <p>
+                    Due to the nature of JavaScript, we must multiply both entities by ten to shift the floating decimal and change the fraction into 
+                    an integer. As a result, the integers can merge and then be divided by ten to shift back the floating decimal into its original 
+                    position. 
+                </p>
+
+                
             </div>
         </div>
 
         <div>
-            <div class="javascript vao header">
+            <div class="javascript vao title">
                 <p>
                     <a href="https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Scripting/Math" target="_self" rel="noopener noreferrer">MDN's Basic Math in JavaScript - Numbers and Operators</a>
                 </p>
@@ -722,7 +743,7 @@
         </div>
 
         <div>
-            <div class="javascript vao header">
+            <div class="javascript vao title">
                 <p>
                     <a href="https://javascript.info/operators" target="_self" rel="noopener noreferrer">JavaScript.info's Basic Operators</a>
                 </p>
