--- a/javascript/v-a-o/v-a-o.html
+++ b/javascript/v-a-o/v-a-o.html
@@ -722,14 +722,117 @@
                     &lt;script&#47;&gt;
                 </pre>
                 <p>
-                    Due to the nature of JavaScript, we must multiply both entities by ten to shift the floating decimal and change the fraction into 
-                    an integer. As a result, the integers can merge and then be divided by ten to shift back the floating decimal into its original 
-                    position. 
+                    Due to the nature of JavaScript (binary system), the process is a bit more complicated. Each variable 
+                    is changed to their binary form, and <code>0.1</code> and <code>0.2</code> do not have binary values 
+                    that perfectly represent them. The end result of the evaluation process gives us "0.30000000000000004" 
+                    but when returning as a decimal string (a set of value to be displayed as is), we get "0.3". This is 
+                    because JavaScript follows a rule:
+                    <br>
+                    "When converting a number to a string, use the shortest decimal representation that will round-trip 
+                    correctly back to the same binary value."
+                    <br>
+                    This means that although the binary representation is "0.30000000000000004", the shorest decimal string 
+                    that best represents is "0.3" (this also means when converting back to binary, this value is can also 
+                    return the binary value "0.30000000000000004").
                 </p>
-
-                
+                <p>
+                    JavaScript will also provide shorter decimal strings in the console, unless explicity told so. This is 
+                    to keep all data as human-readable possible. Therefore, all numerical values will be given a considerably 
+                    shorter decimal string, but one that is still accurate to the initial input.
+                </p>
+                <p>
+                    When adding two numbers, the result will be a number. 
+                    <a href="https://www.w3schools.com/js/tryit.asp?filename=tryjs_numbers_add" target="_blank" rel="noopener noreferrer">Example</a>.
+                </p>
+                <pre>
+                    &lt;script&gt;
+                    <code>
+                        let x = 10;
+                        let y = 20;
+                        let z = x + y;
+                    </code>
+                    &lt;script&#47;&gt;
+                </pre>
+                <p>
+                    However, take caution as the <code>+</code> operator as both for additon and concatenation. When 
+                    adding two strings, the result will be a string concatenation.
+                    <a href="https://www.w3schools.com/js/tryit.asp?filename=tryjs_numbers_add_strings1" target="_blank" rel="noopener noreferrer">Example</a>.
+                </p>
+                <pre>
+                    &lt;script&gt;
+                    <code>
+                        let x = "10";
+                        let y = "20";
+                        let z = x + y;
+                    </code>
+                    &lt;script&#47;&gt;
+                </pre>
+                <p>
+                    If you add a number and a string, the result will be a string concatenation.
+                    <a href="https://www.w3schools.com/js/tryit.asp?filename=tryjs_numbers_add_strings2" target="_blank" rel="noopener noreferrer">Example</a>.
+                </p>
+                <pre>
+                    &lt;script&gt;
+                    <code>
+                        let x = 10;
+                        let y = "20";
+                        let z = x + y;
+                    </code>
+                    &lt;script&#47;&gt;
+                </pre>
+                <p>
+                    Likewise, if you add a string and a number, the result will be a string concatenation.                    
+                    <a href="https://www.w3schools.com/js/tryit.asp?filename=tryjs_numbers_add_strings5" target="_blank" rel="noopener noreferrer">Example</a>.
+                </p>
+                <pre>
+                    &lt;script&gt;
+                    <code>
+                        let x = "10";
+                        let y = 20;
+                        let z = x + y;
+                    </code>
+                    &lt;script&#47;&gt;
+                </pre>
+                <p>
+                    A common mistake to make is thinking the below script to result in 30.
+                    <a href="https://www.w3schools.com/js/tryit.asp?filename=tryjs_numbers_add_strings3" target="_blank" rel="noopener noreferrer">Example</a>.
+                </p>
+                <pre>
+                    &lt;script&gt;
+                    <code>
+                        let x = 10;
+                        let y = 20;
+                        let z = "The result is: " + x + y;
+                    </code>
+                    &lt;script&#47;&gt;
+                </pre>
+                <p>
+                    The truth is, the string only displays the value inside as is. Just like the previous examples with adding 
+                    strings and numbers or vice-versa, the result is a string concatenation.
+                </p>
+                <p>
+                    Another common mistake is in this
+                    <a href="https://www.w3schools.com/js/tryit.asp?filename=tryjs_numbers_add_strings4" target="_blank" rel="noopener noreferrer">example</a>,
+                    the answer we expect is 102030, but not quite.
+                </p>
+                <pre>
+                    &lt;script&gt;
+                    <code>
+                        let x = 10;
+                        let y = 20;
+                        let z = "30";
+                        let result = x + y + z;
+                    </code>
+                    &lt;script&#47;&gt;
+                </pre>
+                <p>
+                    Like in basic mathematics, JavaScript will follow the order of operations. So <code>x</code> and <code>y</code> 
+                    will merge first becoming "30". However, because <code>z</code> is a string cantenation, the result be 
+                    as such becoming "3030".
+                </p>
             </div>
         </div>
+
 
         <div>
             <div class="javascript vao title">
