--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -7,9 +7,11 @@
         <title>Introduction to Flexbox</title> 
     </head>
     <body>
-        <h1 class="flexboxh1">
-            Introduction to Flexbox
-        </h1>
+        <div class="flexbox flexboxcolor topic">
+            <p>
+                Notes on Flexbox
+            </p>
+        </div>
         <ol class="t-o-c">
             <li>
                 <a href="./intro/i-t-f.html" target="_self" rel="noopener noreferrer">Introduction to Flexbox</a>
