--- a/css/css.html
+++ b/css/css.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <div class="csstopic title">
+        <div class="css csscolor topic">
             <p>
                 Notes on CSS
             </p>
